Fix path references on Windows